fix overflow for ClientTable.scss

--- a/src/pages/ClientCard/ClientCard.scss
+++ b/src/pages/ClientCard/ClientCard.scss
@@ -8,11 +8,11 @@
   }
   .client-details{
     margin-top: auto;
-
     height: 100%;
     & .client-table-container{
       display: flex;
       flex-direction: column;
+      overflow: auto;
       gap: 20px;
     }
   }
