--- a/src/pages/ClientCard/ui/ClientTable/ClientTable.scss
+++ b/src/pages/ClientCard/ui/ClientTable/ClientTable.scss
@@ -1,7 +1,3 @@
-.overflow-x-wrap{
-  overflow-x: auto;
-}
-
 .table-client{
   width: 100%;
   height: 100%;
